change logo, title and navigation

--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Test ebany</title>
+    <title>Snowflake notes</title>
+    <link rel="shortcut icon" href="/favicon.png" type="image/gif"
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
 </head>
+
 <body>
-    Hello ebany test today!!!
+    <div class="header">
+        <div class="header-top">
+            <img src="images/logo1.png" alt="Логотип">
+        </div>
+        <div class="title">
+            <h1>Snowflake notes</h1>
+        </div>
+        <div class="navigation">
+            <ul class="menu">
+                <li><a href ="#">1</a></li>
+                <li><a href ="#">2</a></li>
+                <li><a href ="#">3</a></li>
+            </ul>
+        </div>
+    </div>
+
+    
 </body>
 </html>
