--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Snowflake notes</title>
-    <link rel="shortcut icon" href="/favicon3.ico" type="image/gif"
+    <link rel="shortcut icon" href="/favicon_2.png" type="image/gif"
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="header-top">
-            <img src="images/logo1.png" alt="Логотип">
+            <img src="images/logo.png" alt="Логотип">
         </div>
         <div class="title">
             <h1>Snowflake notes</h1>
